samples/_failures_safe/1761469061_cb7bd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6e89363.c: In function ‘main’:
./samples/SAFE/__tmp_a6e89363.c:154:25: error: missing terminating " character
  154 |         fprintf(stderr, "Failed to add
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_a6e89363.c:154:9: error: expected expression at end of input
  154 |         fprintf(stderr, "Failed to add
      |         ^~~~~~~
./samples/SAFE/__tmp_a6e89363.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a6e89363.c:154:9: error: expected declaration or statement at end of input
